tests/NormalTests/paczka1/small_fuzzy/63981724.err
Error in line 5: AZoyRE9b7y4 S561 33,3
Error in line 1: Wwjn S128 4,6
